Add in logout ability

--- a/railway/Base.lproj/Main.storyboard
+++ b/railway/Base.lproj/Main.storyboard
@@ -431,7 +431,7 @@
                             </tableViewSection>
                             <tableViewSection id="Qd0-sf-wky">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="50" id="a79-pU-CiT">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="signoutCell" rowHeight="50" id="a79-pU-CiT">
                                         <rect key="frame" x="0.0" y="466" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a79-pU-CiT" id="bb4-Dk-jbe">
